--- a/public/assets/css/new-style.css
+++ b/public/assets/css/new-style.css
@@ -1,3 +1,50 @@
+a, a:hover, a:after{
+    text-decoration: none;
+}
+
+.work-sans {
+    font-family: 'Work Sans', sans-serif;
+}
+        
+#menu-toggle:checked + #menu {
+    display: block;
+}
+
+.hover\:grow {
+    transition: all 0.3s;
+    transform: scale(1);
+}
+
+.hover\:grow:hover {
+    transform: scale(1.02);
+}
+
+[name="order"] .form-check {
+    background-color: rgba(225, 232, 235, 0.295);
+    padding: 1.5em 3em;
+    margin-bottom: .5em;
+    border-radius: .3em;
+    box-shadow:0px 0px 5px 0.1rem rgba(0, 0, 0, 0.1);
+
+}
+
+[name="order"] .form-check:hover {
+    box-shadow:0px 0px 10px 0.1rem rgba(0, 0, 0, 0.30);
+}
+
+.footer-custom{
+    /* position: absolute;
+    bottom: 0;
+    padding-left: 5em;
+    padding-right: 5em; */
+}
+
+.footer-custom li {
+    list-style: none;
+}
+
+
+/* CARROUSEL*/
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
@@ -88,3 +135,4 @@ body {
         margin-top: 7rem;
     }
 }
+/* CARROUSEL*/
