--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -3,56 +3,76 @@
 {% block title %}Mon panier{% endblock %}
 
 {% block body %}
-<h3>Mon Panier</h3>
+<div class="max-w-7xl mx-auto px-5 mt-16">
+    <div class="lg:flex lg:justify-between lg:flex-row md:flex md:justify-between md:flex-row mb-5 sm:flex sm:flex-col">
+        <div>
+            <h2 class="font-semibold text-3xl mb-3 text-black">Mon Panier</h2>
+            <p>Voici les articles que vous avez ajoutés</p>
+        </div>
+
+        <div class="sm:mt-5">
+            {% if totalQuantity > 0 %}
+                <a href="{{ path('remove_cart') }}" title="Supprimer tous les articles" class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 mt-6 font-semibold rounded focus:outline-none focus:shadow-outline h-10">
+                    <i class="bi bi-x"></i> 
+                    Réinitialiser mon panier
+                </a>
+            {% endif %}
+        </div>
+    </div>
+
+<div class="overflow-x-auto">
+    <table class="w-full table-auto border-collapse border border-gray-200 mt-5">
+        <thead>
+            <tr class="bg-gray-50">
+                <th scope="col" class="px-4 py-2">Article</th>
+                <th scope="col" class="px-4 py-2">Prix (unitaire)</th>
+                <th scope="col" class="px-4 py-2 text-center">Quantité</th>
+                <th scope="col" class="px-4 py-2">Total</th>
+                <th scope="col" class="px-4 py-2"></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in cart %}
+                <tr>
+                    <td class="px-4 py-2">
+                        <img width="60px" height="60px" src="/uploads/{{ item.product.image }}" alt="{{ item.product.name }}" class="mr-2 inline-block">
+                        {{ item.product.name }}
+                    </td>
+                    <td class="px-4 py-2">{{ (item.product.price / 100)|number_format(2,',','.') }} €</td>
+                    <td class="px-4 py-2 text-center">
+                        <a title="Enlever 1 article" href="{{ path('decrease_item', {id:item.product.id}) }}">-</a>
+                        {{ item.quantity }} 
+                        <a title="Ajouter 1 article" href="{{ path('add_to_cart', {id:item.product.id}) }}">
+                           +
+                        </a>
+                    </td>
+                    <td class="px-4 py-2">{{ (item.quantity * (item.product.price / 100))|number_format(2,',','.') }} €</td>
+                    <td class="px-4 py-2"><a title="Supprimer tous les articles de cette ligne" href="{{ path('remove_cart_item', {id: item.product.id}) }}" class="text-red-500"><i class="bi bi-trash"></i></a></td>
+                </tr>
+            {% endfor %}
+        </tbody>
+        <tfoot>
+            <tr>
+                <th class="px-4 py-2">Total</th>
+                <td></td>
+                <td class="px-4 py-2 text-center"><small>x</small> {{ totalQuantity }}</td>
+                <th class="px-4 py-2">{{ (totalPrice / 100)|number_format(2,',','.') }} €</th>
+            </tr>
+        </tfoot>
+    </table>
+</div>
+<div>
+    
+</div>
+<a class="block mb-3 mt-5 text-blue-500" href="{{ path('product') }}">Continuez mes achats</a>
 {% if totalQuantity > 0 %}
-    <a href="{{ path('remove_cart') }}" title="Supprimer tous les articles" class="btn btn-outline-danger btn-sm float-right">
-        <i class="bi bi-x"></i> 
-        Réinitialiser mon panier
+    <a href="{{ path('order') }}" title="Valider puis passer au paiement">
+        <button class="w-full bg-black hover:bg-gray-900 text-white text-sm py-2 px-4 mt-6 font-semibold rounded focus:outline-none focus:shadow-outline h-10">
+            Valider mon panier
+        </button>
     </a>
-{% endif %}
-
-<p>Voici les articles que vous avez ajoutés</p>
-
-<table class="table mt-5">
-    <thead>
-        <tr>
-            <th scope="col">Article</th>
-            <th scope="col">Prix (unitaire)</th>
-            <th class="text-center" scope="col">Quantité</th>
-            <th scope="col">Total</th>
-            <th scope="col"></th>
-        </tr>
-    </thead>
-    <tbody>
-    {% for item in cart %}
-        <tr>
-            <td class="align-middle">
-                <img height="60px" src="/uploads/{{ item.product.image }}" alt="{{ item.product.name }}">
-                {{item.product.name}}
-            </td>
-            <td class="align-middle">{{(item.product.price / 100)|number_format(2,',','.') }} €</td>
-            <td class="text-center align-middle">
-                <a title="Enlever 1 article" href="{{ path('decrease_item', {id:item.product.id}) }}"><i class="bi bi-dash"></i></a>
-                {{ item.quantity }} 
-                <a title="Ajouter 1 article" href="{{ path('add_to_cart', {id:item.product.id}) }}"><i class="bi bi-plus"></i></a>
-            </td>
-            <td class="align-middle">{{ (item.quantity * (item.product.price / 100))|number_format(2,',','.') }} €</td>
-            <td class="align-middle"><a title="Supprimer tous les articles de cette ligne" href="{{ path('remove_cart_item', {id: item.product.id}) }}" class="text-danger"href=""><i class="bi bi-trash"></i></a></td>
-        </tr>
-    {% endfor %}
-    </tbody>
-    <tfoot>
-        <th>Total</th>
-        <td></td>
-        <td class="text-center">  <small>x</small> {{ totalQuantity }}</td>
-        <th>{{ (totalPrice / 100)|number_format(2,',','.') }} €</th>
-    </tfoot>
-</table>
-<a class="mb-3 d-block" href="{{ path('product') }}">Continuez mes achats</a>
-{% if totalQuantity > 0 %}
-        <a href="{{ path('order')}}"title="Valider puis passer au paiement" class="btn btn-outline-success btn-block"></i> Valider mon panier</a>
 {% else %}
-        Votre panier est vide, remplissez le depuis la page <a href="{{ path('product') }}">produits</a>.
+    Votre panier est vide, remplissez-le depuis la page <a href="{{ path('product') }}" class="text-blue-500">produits</a>.
 {% endif %}
 
 
