--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,50 +1,85 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h3>Top ventes du moment</h3>
-    <p>Découvrez nos articles les plus vendus du mois dernier</p>
-    <div class="row">
-        {% for product in top_products %}
-            <div class="col-md-4">
-                <div class="product-item">
-                    <a href="{{ path('product_show', {slug: product.slug}) }}"><img class="img-fluid" src="/uploads/{{product.image}}" alt="{{product.name}}"></a>
-                    <h5 class="mt-2">{{ product.name}}</h5>
-                    <span class="product-subtitle text-center">{{product.subtitle}}</span>
-                    <span class="product-price text-center">{{(product.price / 100 )|number_format(2,',', '.')}} € </span>
-                </div>
-            </div>
-        {% endfor %}
-    </div><!-- /.row -->
+    <section class="bg-white py-8">
 
+        <div class="container mx-auto flex items-start flex-wrap pt-4 pb-12">
+
+            <nav id="store" class="w-full z-30 top-0 px-6 py-1">
+                <div class="w-full container mx-auto flex flex-wrap items-start justify-between mt-0 px-2 py-3">
+
+                    <a class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-xl " href="#">
+                Store
+            </a>
+
+                    {# <div class="flex items-start" id="store-nav-content">
+
+                        <a class="pl-3 inline-block no-underline hover:text-black" href="#">
+                            <svg class="fill-current hover:text-black" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <path d="M7 11H17V13H7zM4 7H20V9H4zM10 15H14V17H10z" />
+                            </svg>
+                        </a>
+
+                        <a class="pl-3 inline-block no-underline hover:text-black" href="#">
+                            <svg class="fill-current hover:text-black" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <path d="M10,18c1.846,0,3.543-0.635,4.897-1.688l4.396,4.396l1.414-1.414l-4.396-4.396C17.365,13.543,18,11.846,18,10 c0-4.411-3.589-8-8-8s-8,3.589-8,8S5.589,18,10,18z M10,4c3.309,0,6,2.691,6,6s-2.691,6-6,6s-6-2.691-6-6S6.691,4,10,4z" />
+                            </svg>
+                        </a>
+
+                    </div> #}
+            </div>
+            </nav>
+
+            {% for product in top_products %}
+            <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
+                <a href="{{ path('product_show', {slug: product.slug}) }}">
+                    <img href="{{ path('product_show', {slug: product.slug}) }}" class="hover:grow hover:shadow-lg" src="/uploads/{{product.image}}" alt="{{product.name}}">
+                    </a>
+                    <div class="pt-3 flex flex-col items-center text-center justify-between">
+                        <p class="text-black">{{ product.name}}</p> <br>
+                        <p class="text-black">{{product.subtitle}}</p> <br>
+                        <p class="text-black font-bold">{{(product.price / 100 )|number_format(2,',', '.')}} € </p>
+                    </div>
+            </div>
+            {% endfor %}
+
+            </div>
+
+    </section>
+    <!-- /.row -->
 
     <!-- START THE FEATURETTES -->
 
-    <hr class="featurette-divider">
 
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h2 class="featurette-heading">Ne ratez pas notre <span class="text-muted">collection automne</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+
+    <div class="max-w-7xl mx-auto px-5 mt-16">
+        <hr class="border-b border-gray-100 my-6">
+        <div class="flex flex-col md:flex-row md:items-center featurette">
+            <div class="md:w-7/12 px-10">
+                <h2 class="text-3xl font-bold text-gray-500 mb-2">Ne ratez pas notre <span class="text-gray-500">collection automne</span></h2>
+                <p class="text-lg leading-relaxed mb-4">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            </div>
+            <div class="md:w-5/12 mt-4 md:mt-0">
+                <img class="w-full" src="{{ asset('assets/img/woman.jpg') }}" alt="model woman">
+            </div>
         </div>
-        <div class="col-md-5">
-            <img class="img-fluid" src="{{ asset('assets/img/woman.jpg') }}" alt="model woman">
+        
+        <hr class="border-b border-gray-100 my-6">
+        
+        <div class="flex flex-col md:flex-row md:items-center featurette">
+            <div class="md:w-7/12 md:order-2 px-10">
+                <h2 class="text-3xl font-bold text-gray-500 mb-2">Promotions sur tous les rayons <span class="text-gray-500">hommes</span></h2>
+                <p class="text-lg leading-relaxed mb-4">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            </div>
+            <div class="md:w-5/12 md:order-1 mt-4 md:mt-0">
+                <img class="w-full" src="{{ asset('assets/img/man.jpg') }}" alt="model man">
+            </div>
         </div>
+        
+        {# <hr class="border-b border-gray-300 my-8"> #}
+        
     </div>
 
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-        <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Promotions sur tous les rayons <span class="text-muted">hommes</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-        </div>
-        <div class="col-md-5 order-md-1">
-            <img class="img-fluid" src="{{ asset('assets/img/man.jpg') }}" alt="model man">
-        </div>
-    </div>
-
-
-    <hr class="featurette-divider">
 
     <!-- /END THE FEATURETTES -->
 {% endblock %}
