--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -3,42 +3,44 @@
 {% block title %}Ma commande - La Boot'Ique{% endblock %}
 
 {% block body %}
-<h2>Mon récapitulatif</h2>
-<div class="row">
-    <div class="col-md-5">
-        <strong>Mon adresse de livraison</strong><br>
-        <p>{{order.delivery|raw}}</p>
-
-        <strong>Transporteur</strong>
-        <p>{{order.carrierName}}</p>
-    </div>
-    <div class="col-md-7">
-        <strong class="summary-label">Vos articles</strong>
-        <div class="cart-summary">
-            {% for item in cart.products %}
-                <div class="row">
-                    <div class="col-2 my-auto"><img height="50px" src="/uploads/{{ item.product.image }}" alt="{{ item.product.name }}"></div>
-                    <div class="col-8 my-auto">{{ item.product.name }}</div>
-                    <div class="col-2 my-auto">x{{ item.quantity }}</div>
+<div class="max-w-7xl mx-auto px-5 mt-16">
+    <h2 class="font-semibold text-3xl mb-3 px-4 text-black-500">Mon récapitulatif</h2>
+    <div class="flex flex-wrap">
+        <div class="w-full md:w-1/2 px-4">
+            <strong class="block mb-4">Mon adresse de livraison</strong>
+            <p class="mb-4">{{ order.delivery|raw }}</p>
+    
+            <strong class="block mb-2">Transporteur</strong>
+            <p>{{ order.carrierName }}</p>
+        </div>
+        <div class="w-full md:w-1/2 px-4">
+            <strong class="block mb-4 summary-label">Vos articles</strong>
+            <div class="bg-gray-100 font-medium py-5 px-5 rounded-lg shadow-gray-900">
+                {% for item in cart.products %}
+                    <div class="flex items-center justify-between mb-4">
+                        <div><img width="50px" height="50px" src="/uploads/{{ item.product.image }}" alt="{{ item.product.name }}"></div>
+                        <div class="flex-1 ml-4">{{ item.product.name }}</div>
+                        <div class="ml-4">x{{ item.quantity }}</div>
+                    </div>
+                {% endfor %}
+                <hr class="my-4">
+                <div class="flex justify-between mb-2">
+                    <div class="font-bold">Total articles</div>
+                    <div>{{ (totalPrice / 100)|number_format(2,',','.') }} €</div>
                 </div>
-            {% endfor %}
-            <hr>
-            <div class="row">
-                <div class="col-9 font-weight-bold">Total articles</div>
-                <div class="col-3">{{ (totalPrice / 100)|number_format(2,',','.') }} €</div>
-            </div>
-            <div class="row">
-                <div class="col-9 font-weight-bold">Livraison</div>
-            <div class="col-3">{{ (order.carrierPrice/100)|number_format(2,',','.')}} €</div>
-            </div>
-            <hr>
-            <div class="row">
-                <div class="col-9 font-weight-bold">Total commande</div>
-                <div class="col-3 font-weight-bold">{{ ((totalPrice / 100) + order.carrierPrice / 100)|number_format(2,',','.') }} €</div>
+                <div class="flex justify-between mb-2">
+                    <div class="font-bold">Livraison</div>
+                    <div>{{ (order.carrierPrice / 100)|number_format(2,',','.') }} €</div>
+                </div>
+                <hr class="my-4">
+                <div class="flex justify-between">
+                    <div class="font-bold">Total commande</div>
+                    <div class="font-bold">{{ ((totalPrice / 100) + order.carrierPrice / 100)|number_format(2,',','.') }} €</div>
+                </div>
             </div>
         </div>
     </div>
-    <a href="{{ path('checkout', {reference: order.reference}) }}" class="btn btn-outline-success btn-block mt-4"><i class="bi bi-credit-card-2-back"></i> Payer</a>
-</div>
+<a href="{{ path('checkout', {reference: order.reference}) }}" class="block w-full md:w-auto px-4 py-2 mt-4 text-center text-white bg-black rounded-lg"><i class="bi bi-credit-card-2-back"></i> Payer</a>
 
+</div>
 {% endblock %}
