--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -3,25 +3,45 @@
 {% block title %}Nos produits{% endblock %}
 
 {% block body %}
-<div class="row">
-    <div class="col-md-3">
-        <h3 class="text-center">Rechercher</h3>
-        {{ form(form) }}
-    </div>
-    <div class="col-md-9">
-            <h3 class="text-center">Nos Produits</h3>
-        <div class="row">
+<div class="max-w-7xl mx-auto px-5 mt-16 text-black">
+    <div class="lg:flex lg:flex-row lg:w-full md:flex md:flex-col md:justify-center md:items-start">
+        <div class="lg:w-1/3 lg:flex lg:flex-col lg:items-start md:w-1/3 md:flex md:items-start sm:w-full">
+            <h3 class="text-black font-bold text-center mb-3">Rechercher</h3>
+
+            {{ form_start(form) }}
+
+            {{form_row(form.string)}}
+            {{ form_label(form.categories, 'Categories', {'label_attr': {'class': 'hidden text-gray-700 text-sm font-semibold mb-2'}}) }}
+            
+            {% for category in form.categories %}
+                <div class="mt-2 mb-2">
+                    {{ form_widget(category, {'id': 'category_'~category.vars.value, 'class': 'h-5 w-5 cursor-pointer appearance-none rounded-md border border-blue-gray-200 transition-all checked:border-gray-900 checked:bg-gray-900 checked:before:bg-gray-900 hover:before:opacity-10 mr-2'}) }}
+                    {{ form_label(category, null, {'label_attr': {'class': 'text-sm'}}) }}
+                </div>
+            {% endfor %}
+            
+            {{ form_end(form) }}
+
+        </div>
+        <div class="text-black lg:w-2/3 md:w-2/3 sm:w-full">
+            <h3 class="text-black font-bold text-center">Nos Produits</h3>
+        <div class="w-fit mx-auto grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mt-10 mb-5">
             {% for product in products %}
-                <div class="col-md-4">
-                    <div class="product-item">
-                        <a href="{{ path('product_show', {slug: product.slug}) }}"><img class="img-fluid" src="/uploads/{{product.image}}" alt="{{product.name}}"></a>
-                        <h5 class="mt-2">{{ product.name}}</h5>
-                        <span class="product-subtitle text-center">{{product.subtitle}}</span>
-                        <span class="product-price text-center">{{(product.price / 100 )|number_format(2,',', '.')}} € </span>
-                    </div>
+                <div class="w-72 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl">
+                    <a href="{{ path('product_show', {slug: product.slug}) }}">
+                        <img class="h-80 w-72 object-cover rounded-t-xl" src="/uploads/{{product.image}}" alt="{{product.name}}"/>
+                        <div class="px-4 py-3 w-72">
+                            <span class="text-gray-400 mr-3 uppercase text-xs">{{product.subtitle}}</span>
+                            <p class="text-lg font-bold text-black truncate block capitalize">{{ product.name}}</p>
+                            <div class="flex items-center">
+                                <p class="text-lg font-semibold text-black cursor-auto my-3">{{(product.price / 100 )|number_format(2,',', '.')}} € </p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             {% endfor %}
         </div> 
+    </div>
     </div>
 </div>
   
