--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,29 +1,66 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_login.html.twig' %}
 
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
 <form method="post">
     {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+        <strong class="font-bold">Attention</strong>
+        <span class="block sm:inline">{{ error.messageKey|trans(error.messageData, 'security') }}</span>
+        <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+          <svg class="fill-current h-6 w-6 text-red-500" role="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><title>Close</title><path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/></svg>
+        </span>
+    </div>
+        {# <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div> #}
     {% endif %}
 
     {% if app.user %}
         <div class="mb-3">
-            Vous êtes connecté(e) en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+            Vous êtes connecté(e) en tant que {{ app.user.username }}, <a href="{{ path('app_logout') }}">Déconnexion</a>
         </div>
     {% endif %}
 
-    <h2 class="h3 mb-3 font-weight-normal">Renseignez vos identifiants</h2>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label class=" mt-4" for="inputPassword">Mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+    <div
+    class="container max-w-md mx-auto xl:max-w-3xl h-full flex bg-white rounded-lg shadow mt-44 overflow-hidden"
+  >
+    <div class="relative hidden xl:block xl:w-1/2 h-full">
+      <img
+        class="absolute h-auto w-full object-cover"
+        src="https://images.unsplash.com/photo-1541233349642-6e425fe6190e"
+        alt="my zomato"
+      />
+    </div>
+    <div class="w-full xl:w-1/2 p-8">
+      <form method="post" action="#" onSubmit="return false">
+        <h1 class=" text-2xl font-bold">Renseignez vos identifiants</h1>
+        <div>
+          <span class="text-gray-600 text-sm">
+            Vous n'avez pas encore de compte?
+          </span>
+          <a href="{{ path('register') }}">
+              <span class="text-gray-700 text-sm font-semibold">
+              S'inscrire 
+              </span>
+          </a>
+        </div>
+        <div class="mb-4 mt-6">
+            <label for="inputEmail" class="block text-gray-700 text-sm font-semibold mb-2">Email</label>
+            <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-200 leading-tight focus:outline-none focus:shadow-outline h-10" autocomplete="email" required autofocus>
+        </div>
+        <div class="mb-4 mt-6">
+            <label for="inputPassword" class="block text-gray-700 text-sm font-semibold mb-2 mt-4">Mot de passe</label>
+            <input type="password" name="password" id="inputPassword" class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-200 leading-tight focus:outline-none focus:shadow-outline h-10" autocomplete="current-password" required>
+        </div>
+        <div class="flex items-center mt-6">
 
+          <button class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10">Connexion</button>
+          <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+        </form>
+    </div>
+  </div>
+    
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
@@ -35,9 +72,5 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-outline-success mt-4" type="submit">
-        Connexion
-    </button>
 </form>
-<p class="mt-3">Vous n'êtes pas inscrit ? <a href="{{ path('register') }}">Créez un compte ici</a></p>
 {% endblock %}
