--- a/templates/payment/success.html.twig
+++ b/templates/payment/success.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ma commande - La Boot'Ique{% endblock %}
+{% block title %}Ma commande - Nom de la boutique{% endblock %}
 
 {% block body %}
     <h2>Confirmation de votre commande</h2>
