--- a/public/assets/css/new-style.css
+++ b/public/assets/css/new-style.css
@@ -19,6 +19,12 @@ a, a:hover, a:after{
     transform: scale(1.02);
 }
 
+.img-prdt-home{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
 [name="order"] .form-check {
     background-color: rgba(225, 232, 235, 0.295);
     padding: 1.5em 3em;
