--- a/templates/account/address.html.twig
+++ b/templates/account/address.html.twig
@@ -20,8 +20,8 @@
 
         {% for address in app.user.addresses %}
             <div class="max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ address.name }}</h5>
-                <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
+                <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">{{ address.name }}</h5> <!--dark:text-white-->
+                <p class="mb-3 font-normal text-gray-700"> <!-- dark:text-gray-400 -->
                     {{ address.address }},<br>
                     {{ address.postal }} -
                     {{ address.city }}<br>
