--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -43,8 +43,8 @@
             {% if is_granted('ROLE_ADMIN') %}
             <div class="flex gap-2 items-start">
                 <a href="{{ path('admin') }}" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Back office</h5>
-                    <p class="font-normal text-gray-700 dark:text-gray-400">
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Back office</h5> <!--dark:text-white-->
+                    <p class="font-normal text-gray-700"> <!--dark:text-gray-400-->
                         Si vous voyez cette option, cela signifie que vous êtes un <strong>administrateur</strong> de cette boutique e-Commerce. <br>
                         Vous aurez donc la possibilité de gérer les produits (ajout, modification, suppression), gérer les catégories etc. 
                     </p>
@@ -55,8 +55,8 @@
     
             <div class="flex gap-2 items-start">
                 <a href="{{ path('account_password') }}" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Modifier le mot de passe</h5>
-                    <p class="font-normal text-gray-700 dark:text-gray-400">
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Modifier le mot de passe</h5> <!--dark:text-white-->
+                    <p class="font-normal text-gray-700"> <!--dark:text-gray-400-->
                         Gérez toutes vos informations personnelles ici.
                     </p>
                 </a>
@@ -65,8 +65,8 @@
     
             <div class="flex gap-2 items-start">
                 <a href="{{ path('account_orders') }}" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Mes commandes</h5>
-                    <p class="font-normal text-gray-700 dark:text-gray-400">
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Mes commandes</h5> <!--dark:text-white-->
+                    <p class="font-normal text-gray-700"> <!--dark:text-gray-400-->
                         Accédez à l'historique de vos commandes et leurs informations.
                     </p>
                 </a>
@@ -75,8 +75,8 @@
     
             <div class="flex gap-2 items-start">
                 <a href="{{ path('account_address') }}" class="block max-w-sm p-6 bg-white border border-gray-200 rounded-lg shadow hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Mes adresses</h5>
-                    <p class="font-normal text-gray-700 dark:text-gray-400">
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">Mes adresses</h5> <!--dark:text-white-->
+                    <p class="font-normal text-gray-700"> <!--dark:text-gray-400-->
                         Gérer vos adresses de livraisons.
                     </p>
                 </a>
