--- a/templates/account/password.html.twig
+++ b/templates/account/password.html.twig
@@ -2,8 +2,8 @@
 
 {% block title %}Modifier mot de passe  - La Boot'Ique{% endblock %}
 {% block body %}
-    <div class="container max-w-md mx-auto xl:max-w-3xl h-full bg-white rounded-lg shadow mt-24 overflow-hidden">
-        <h2 class="text-4xl mb-5 text-black font-bold">Modification mot de passe</h2>
+    <div class="container max-w-md mx-auto pt-4 pb-4 xl:max-w-3xl h-full bg-white rounded-lg shadow mt-24 overflow-hidden">
+        <h2 class="text-4xl mb-4 text-black font-bold">Modification mot de passe</h2>
         {{form(form)}}
         <a title="Retour vers votre espace membres" href="{{ path('account') }}">
             <button class="w-full bg-zinc-100 hover:bg-grey-900 text-black text-sm py-2 px-4 mt-6 font-semibold rounded focus:outline-none focus:shadow-outline h-10 btn">
