--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -33,7 +33,7 @@
             {% for product in top_products %}
             <div class="w-full md:w-1/3 xl:w-1/4 p-6 flex flex-col">
                 <a href="{{ path('product_show', {slug: product.slug}) }}">
-                    <img href="{{ path('product_show', {slug: product.slug}) }}" class="hover:grow hover:shadow-lg" src="/uploads/{{product.image}}" alt="{{product.name}}">
+                    <img href="{{ path('product_show', {slug: product.slug}) }}" class="hover:grow hover:shadow-lg img-prdt-home" src="/uploads/{{product.image}}" alt="{{product.name}}">
                     </a>
                     <div class="pt-3 flex flex-col items-center text-center justify-between">
                         <p class="text-black">{{ product.name}}</p> <br>
