--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="max-w-7xl mx-auto px-5 mt-16 text-black">
     <div class="lg:flex lg:flex-row lg:w-full md:flex md:flex-col md:justify-center md:items-start">
-        <div class="lg:w-1/3 lg:flex lg:flex-col lg:items-start md:w-1/3 md:flex md:items-start sm:w-full">
+        <div class="lg:w-15 lg:flex lg:flex-col lg:items-start md:w-15 md:flex md:items-start sm:w-full">
             <h3 class="text-black font-bold text-center mb-3">Rechercher</h3>
 
             {{ form_start(form) }}
@@ -23,7 +23,7 @@
             {{ form_end(form) }}
 
         </div>
-        <div class="text-black lg:w-2/3 md:w-2/3 sm:w-full">
+        <div class="text-black lg:w-85 md:w-85 sm:w-full">
             <h3 class="text-black font-bold text-center">Nos Produits</h3>
         <div class="w-fit mx-auto grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mt-10 mb-5">
             {% for product in products %}
